Have issue labels choose color of text based on contrast with background.

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -129,3 +129,13 @@ footer {
     height: 80px;
   }
 }
+
+
+/*.label {
+  @if lightness(attr(data-bg)) > 50 {
+    color: #000000;
+  }
+  @else {
+    color: #ffffff;
+  }
+}*/
